fix: trailing space issue with debootstrap (inconsistency in rfc4880 clearsign and textmode detached sign)

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -9,7 +9,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: sudo env DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends apt-utils
-      - run: ./init_mirror
+      - run: |
+          version="$(./get_version)"
+          ./init_mirror "$version"
       - uses: actions/upload-artifact@v3
         with:
           name: conf
