--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -88,15 +88,15 @@ jobs:
           (cd container && ./build container-amd64 container-arm64)
           podman login -u token -p ${{ github.token }} ghcr.io
           image_amd64="$(podman load < container/.build/container-amd64-*.oci | awk '{ print $NF }')"
-          podman tag "$image_amd64" ghcr.io/${{ github.repository }}:amd64-$version
-          podman push ghcr.io/${{ github.repository }}:amd64-$version
+          podman tag "$image_amd64" ghcr.io/${{ github.repository }}/amd64
+          podman push ghcr.io/${{ github.repository }}/amd64
+          podman tag "$image_amd64" ghcr.io/${{ github.repository }}/amd64:$version
+          podman push ghcr.io/${{ github.repository }}/amd64:$version
           image_arm64="$(podman load < container/.build/container-arm64-*.oci | awk '{ print $NF }')"
-          podman tag "$image_arm64" ghcr.io/${{ github.repository }}:arm64-$version
-          podman push ghcr.io/${{ github.repository }}:arm64-$version
-          podman manifest create ghcr.io/${{ github.repository }}:$version
-          podman manifest add ghcr.io/${{ github.repository }}:$version ghcr.io/${{ github.repository }}:amd64-$version
-          podman manifest add ghcr.io/${{ github.repository }}:$version ghcr.io/${{ github.repository }}:arm64-$version
-          podman push ghcr.io/${{ github.repository }}:$version
+          podman tag "$image_arm64" ghcr.io/${{ github.repository }}/arm64v8
+          podman push ghcr.io/${{ github.repository }}/arm64v8
+          podman tag "$image_arm64" ghcr.io/${{ github.repository }}/arm64v8:$version
+          podman push ghcr.io/${{ github.repository }}/arm64v8:$version
       - run: |
-          version='${{ needs.init.outputs.version }}'
-          podman run --rm --arch amd64 ghcr.io/${{ github.repository }}:$version bash -c 'apt-get update && apt-get install -y vim'
+          podman run --rm ghcr.io/${{ github.repository }}/amd64 bash -c 'apt-get update && apt-get install -y vim'
+          podman run --rm ghcr.io/${{ github.repository }}/arm64v8 bash -c 'apt-get update && apt-get install -y vim'
